<resources>
    <string name="app_name" translatable="false">GuessANumber</string>
    <string name="one_as_num" translatable="false">1</string>
    <string name="two_as_num" translatable="false">2</string>
    <string name="three_as_num" translatable="false">3</string>
    <string name="four_as_num" translatable="false">4</string>
    <string name="five_as_num" translatable="false">5</string>
    <string name="six_as_num" translatable="false">6</string>
    <string name="seven_as_num" translatable="false">7</string>
    <string name="eight_as_num" translatable="false">8</string>
    <string name="nine_as_num" translatable="false">9</string>
    <string name="zero_as_num" translatable="false">0</string>
    <string name="start_game">Start a new game</string>
    <string name="start_game_youwin">Start a new game (you win)</string>
    <string name="start_game_youloose">Start a new game (you loose)</string>
    <string name="toobig">Too big</string>
    <string name="toosmall">Too small</string>
    <string name="retries">Retries</string>
    <string name="canc" translatable="false">C</string>
    <string name="status_image_expl">Status image for current game</string>
    <string name="game_already_started">Game already started!</string>
    <string name="max_number">Max chars allowed reached</string>
</resources>