<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/status_iv"
        android:layout_width="265dp"
        android:layout_height="254dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/excl"
        android:contentDescription="@string/status_image_expl"/>

    <TextView
        android:id="@+id/game_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="88dp"
        android:text="@string/start_game"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_iv" />

    <TextView
        android:id="@+id/input_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="12dp"
        android:maxLength="@integer/max_input_len"
        android:textSize="@dimen/medium_text_size"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/eight_btn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/retries_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="16dp"
        android:text="@string/retries"
        android:textSize="@dimen/small_text_size"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/input_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="28dp"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false" />

    <Button
        android:id="@+id/eight_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/eight_as_num"
        app:layout_constraintBottom_toTopOf="@+id/five_btn"
        app:layout_constraintEnd_toStartOf="@+id/seven_btn"
        android:enabled="false" />

    <Button
        android:id="@+id/three_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/three_as_num"
        app:layout_constraintBottom_toTopOf="@+id/c_btn"
        app:layout_constraintEnd_toStartOf="@+id/two_btn"
        android:enabled="false" />

    <Button
        android:id="@+id/four_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/four_as_num"
        app:layout_constraintBottom_toTopOf="@+id/one_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false" />

    <Button
        android:id="@+id/zero_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="28dp"
        android:text="@string/zero_as_num"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ok_btn"
        android:enabled="false" />

    <Button
        android:id="@+id/c_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="28dp"
        android:text="@string/canc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zero_btn"
        android:enabled="false"/>

    <Button
        android:id="@+id/nine_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/nine_as_num"
        app:layout_constraintBottom_toTopOf="@+id/six_btn"
        app:layout_constraintEnd_toStartOf="@+id/eight_btn"
        android:enabled="false" />

    <Button
        android:id="@+id/five_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/five_as_num"
        app:layout_constraintBottom_toTopOf="@+id/two_btn"
        app:layout_constraintEnd_toStartOf="@+id/four_btn"
        android:enabled="false" />

    <Button
        android:id="@+id/six_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/six_as_num"
        app:layout_constraintBottom_toTopOf="@+id/three_btn"
        app:layout_constraintEnd_toStartOf="@+id/five_btn"
        android:enabled="false" />

    <Button
        android:id="@+id/one_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/one_as_num"
        app:layout_constraintBottom_toTopOf="@+id/ok_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false" />

    <Button
        android:id="@+id/two_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/two_as_num"
        app:layout_constraintBottom_toTopOf="@+id/zero_btn"
        app:layout_constraintEnd_toStartOf="@+id/one_btn"
        android:enabled="false" />

    <Button
        android:id="@+id/seven_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/seven_as_num"
        app:layout_constraintBottom_toTopOf="@+id/four_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false" />

</androidx.constraintlayout.widget.ConstraintLayout>